[package]
name = "nikidb"
version = "0.1.0"
edition = "2021"
description = "an embedded k-v storage written in rust, similar to boltdb"
license = "MIT"
authors = ["Walter Wu"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
integer-encoding = "3.0.2"    
crc = "1.8"
memmap = "0.7"
log = "0.4.8"
thiserror = "1.0"
fnv = "1.0.6"
memoffset = "0.6"
page_size = "0.4.2"
parking_lot = "0.7.1"
lock_api = "0.1.5"
